[tool.poetry]
name = "acfunSDK"
version = "0.8.8.dev1"
description = "acfunSDK - UNOFFICEICAL"
license = "MIT"
authors = ["dolacmeo <dolacmeo@gmail.com>"]
maintainers = []
readme = "README.md"
homepage = "https://pypi.org/project/acfunsdk/"
repository = "https://github.com/dolaCmeo/acfunSDK"
documentation = "https://github.com/dolaCmeo/acfunSDK"
keywords = ["acfun", "sdk", "acfunsdk", "unofficeical"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: JavaScript",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries",
]
packages = [{include = "acfunsdk"}]
exclude = [
    "acfunsdk/app/",
    "acfunsdk/src/",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23"
lxml = "^4.9"
beautifulsoup4 = "^4.11"
cssutils = "^2.6"
alive-progress = "^2.4"
filetype = "^1.1"
jinja2 = "^3.1"
websocket-client = "^1.4"
pycryptodome = "^3.15"
protobuf = "==3.20.1"
proto-plus = "==1.22.1"
psutil = "^5.9"
rich = "^12.5"
click = "^8.1"
emoji = "^2"
climage = "^0.1.3"
keyboard = "^0.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = 'aliyun.mirrors'
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dolaCmeo/acfunSDK/issues"

[tool.poetry.scripts]
acfun = 'acfun.__main__:cli'
