[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acfunsdk"
version = "0.9.7"
description = "acfunsdk - UNOFFICIAL"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "dolacmeo", email = "dolacmeo@gmail.com" }]
keywords = ["acfun", "sdk", "acfunsdk", "unofficial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27.0",
    "lxml>=5.3.0",
    "beautifulsoup4>=4.12.0",
    "packaging>=24.0",
]

[project.urls]
Homepage = "https://pypi.org/project/acfunsdk/"
Repository = "https://github.com/dolaCmeo/acfunsdk"
Documentation = "https://github.com/dolaCmeo/acfunsdk"
"Bug Tracker" = "https://github.com/dolaCmeo/acfunsdk/issues"

[dependency-groups]
dev = ["pytest>=8.3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: hits real AcFun HTTP APIs",
    "requires_cookies: needs ACFUNSDK_TEST_LOADING and matching .cookies file",
    "writes_account_state: may perform sign-in or other account-side writes",
    "source_urls: probes AcSource HTTP(S)/WSS endpoints (network)",
]

[tool.hatch.build]
exclude = [
    "acfunsdk/app",
    "acfunsdk/src",
]

[tool.hatch.build.targets.wheel]
packages = ["acfunsdk"]
